--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.1.0-SNAPSHOT" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.1.0-SNAPSHOT http://maven.apache.org/xsd/maven-4.1.0-SNAPSHOT.xsd">
-    <modelVersion>4.1.0-SNAPSHOT</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
     <groupId>gov.acwi</groupId>
     <artifactId>wqp-etl-storet</artifactId>
     <version>4.1.0-SNAPSHOT</version>
