--- a/src/main/resources/db/changelog/epa/tables/hdatumToSrid/changeLog.yml
+++ b/src/main/resources/db/changelog/epa/tables/hdatumToSrid/changeLog.yml
@@ -5,7 +5,7 @@ databaseChangeLog:
 
   - changeSet:
       author: drsteini
-      id: "create.table.${STORETW_SCHEMA_NAME}.hdatum_to_srid"
+      id: "create.table.${STORETW_SCHEMA_NAME}.hdatum_to_srid.v2"
       preConditions:
         - onFail: MARK_RAN
         - onError: HALT
